# scarablib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.dev  README.md  build.tmp  compile_and_run.sh  compile_commands.json  debug.sh
doc/: dev_standards.md  documentation.md  macros.md  todo.md
docs/: Makefile  documentation.md  macros.md  todo.md
include/scarablib/: typedef.hpp
include/scarablib/audio/: Iaudio.hpp  music.hpp  sfx.hpp
include/scarablib/camera/: camera.hpp  camera2d.hpp  perspectivecamera.hpp
include/scarablib/components/: boundingbox.hpp  materialcomponent.hpp  physicscomponent.hpp
include/scarablib/geometry/: geometry_factory.hpp  mesh.hpp  model.hpp  sprite.hpp  submesh.hpp  terrainmap.hpp  triangle.hpp  vertex.hpp
include/scarablib/gfx/: color.hpp  font.hpp  geometry_factory.hpp  image.hpp  mesh.hpp  model.hpp  model_factory.hpp  shape2d.hpp  skybox.hpp  texture.hpp  texture_array.hpp  texturebase.hpp
include/scarablib/gfx/2d/: circle.hpp  rectangle.hpp  sprite.hpp  sprite_factory.hpp  terrainmap.hpp  triangle.hpp
include/scarablib/gfx/3d/: billboard.hpp  boundingbox.hpp  cube.hpp  model.hpp  model_factory.hpp  plane.hpp  skybox.hpp
include/scarablib/input/: keyboard.hpp  keycode.hpp  mouse.hpp
include/scarablib/legacyopengl/: lcamera2d.hpp  lcamera3d.hpp  lshapes.hpp
include/scarablib/network/: nethost.hpp  network.hpp
include/scarablib/opengl/: assets.hpp  bufferbundle.hpp  ebo.hpp  resourcesmanager.hpp  scoped_bind.hpp  shader.hpp  shader_manager.hpp  shader_program.hpp  shaders.hpp  uniformbuffer.hpp  vao.hpp  vao_manager.hpp  vaomanager.hpp  vbo.hpp  vertexarray.hpp  vertexarraybuilder.hpp  vertexarraydsa.hpp  vertexbuffercomponent.hpp
include/scarablib/opengl/shaders/: README.md  vertex.glsl
include/scarablib/opengl/shaders/2d/: circle_fragment.glsl  circle_fs.glsl  font_fragment.glsl  font_vertex.glsl  fragment.glsl  fragment_texture.glsl  vertex.glsl  vertex_texture.glsl
include/scarablib/opengl/shaders/3d/: billboard_vertex.glsl  fragment.glsl  fragment_texarray.glsl  fragment_texture.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl  vertex_texture.glsl
include/scarablib/physics/: boundingbox.hpp  physicscomponent.hpp
include/scarablib/proper/: dirtyproxy.hpp  error.hpp  log.hpp  result.hpp
include/scarablib/proper/vector/: vec2.hpp  vec3.hpp  vec4.hpp  vec5.hpp  vecutil.hpp
include/scarablib/render/: renderer.hpp  renderpipeline.hpp  scene.hpp
include/scarablib/scenes/: Iscene.hpp  camera.hpp  camera2d.hpp  perspectivecamera.hpp  scene.hpp  scene2d.hpp  scene3d.hpp
include/scarablib/shapes/: drawable.hpp  mesh.hpp  shape2d.hpp  shape3d.hpp
include/scarablib/shapes/2d/: circle.hpp  rectangle.hpp  triangle.hpp
include/scarablib/shapes/3d/: cube.hpp  mesh.hpp
include/scarablib/types/: Iaudio.hpp  audio.hpp  color.hpp  font.hpp  image.hpp  music.hpp  raycast.hpp  skybox.hpp  sound.hpp  texture.hpp  texture_array.hpp  timer.hpp  vertex.hpp
include/scarablib/types/map/: uniformgrid.hpp
include/scarablib/types/time/: alarmmanager.hpp  clock.hpp  timer.hpp
include/scarablib/utils/: file.hpp  hash.hpp  math.hpp  model.hpp  opengl.hpp  random.hpp  sdl.hpp  string.hpp
include/scarablib/window/: buttoncode.hpp  events.hpp  keycode.hpp  window.hpp  window_conf.hpp
lib/SDL2/: README.md
lib/SDL2_mixer/: libSDL2_mixer-2.0.so.0
licenses/: GLM.txt
resources/shaders/: fragment.glsl
resources/shaders/2d/: font_fs.glsl
scripts/: build_compile_commands.sh  install-flamegraph.sh  run-flamegraph.sh
src/audio/: Iaudio.cpp  music.cpp  sfx.cpp
src/camera/: camera.cpp  camera2d.cpp  perspectivecamera.cpp
src/components/: boundingbox.cpp
src/geometry/: geometry_factory.cpp  materialcomponent.cpp  mesh.cpp  model.cpp  sprite.cpp  terrainmap.cpp  uniformgrid.cpp
src/gfx/: color.cpp  font.cpp  image.cpp  mesh.cpp  model.cpp  model_factory.cpp  shape2d.cpp  skybox.cpp  texture.cpp  texture_array.cpp  texturebase.cpp
src/gfx/2d/: circle.cpp  rectangle.cpp  sprite.cpp  sprite_factory.cpp  terrainmap.cpp  triangle.cpp
src/gfx/3d/: billboard.cpp  boundingbox.cpp  cube.cpp  geometry_factory.cpp  model.cpp  model_factory.cpp  plane.cpp  skybox.cpp
src/input/: keyboard.cpp  mouse.cpp
src/legacyopengl/: lcamera2d.cpp  lcamera3d.cpp  lshapes.cpp
src/network/: nethost.cpp  network.cpp
src/opengl/: assets.cpp  bufferbundle.cpp  ebo.cpp  resourcesmanager.cpp  shader.cpp  shader_manager.cpp  shader_program.cpp  uniformbuffer.cpp  vao.cpp  vao_manager.cpp  vaomanager.cpp  vbo.cpp  vertexarray.cpp  vertexarraybuilder.cpp  vertexarraydsa.cpp  vertexbuffercomponent.cpp
src/physics/: boundingbox.cpp
src/proper/: error.cpp  log.cpp  result.cpp
src/render/: renderer.cpp  renderpipeline.cpp  scene.cpp
src/scenes/: Iscene.cpp  camera.cpp  camera2d.cpp  perspectivecamera.cpp  scene.cpp  scene2d.cpp  scene3d.cpp
src/shapes/: drawable.cpp  mesh.cpp  shape2d.cpp  shape3d.cpp  shapes2d.cpp
src/shapes/2d/: circle.cpp  rectangle.cpp  triangle.cpp
src/shapes/3d/: cube.cpp  mesh.cpp
src/types/: Iaudio.cpp  audio.cpp  clock.cpp  color.cpp  font.cpp  image.cpp  music.cpp  raycast.cpp  skybox.cpp  sound.cpp  texture.cpp  texture_array.cpp  timer.cpp
src/types/map/: terrainmap.cpp  uniformgrid.cpp
src/types/time/: alarmmanager.cpp  raycast.cpp  timer.cpp
src/utils/: file.cpp  model.cpp  opengl.cpp  sdl.cpp  string.cpp
src/window/: window.cpp
test/: lmain.cpp  main.cpp  main.cppbak
test/files/: main.cpp
